attempt to fix section overflow bug

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -22,7 +22,9 @@ p {
 
 .pageDiv {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+    height: auto;
+    padding-bottom: 40px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -72,6 +74,17 @@ p {
     left: 5%;
 }
 
+.baseImg {
+    display: block;
+    height: auto;
+    width: auto;
+}
+
+.compImg {
+    max-height: 445px;
+    max-width: 495px;
+}
+
 .shade {
     padding: 5px 5px 0 10px;
     border-radius: 5px;
@@ -85,11 +98,9 @@ p {
 
 @media screen and (max-width: $vFlexWidth) {
     .vFlexOnWidth {
-        flex-direction: column;
-        // align-items: center;
+        flex-direction: column; // align-items: center;
         justify-content: center;
     }
-    
     .leftSide {
         width: 80%;
     }
